fixed shadow stylized scrollbar fixed roots to public imgs

--- a/src/components/footer/Footer.module.css
+++ b/src/components/footer/Footer.module.css
@@ -1,7 +1,7 @@
 .footerInfo {
   background-color: var(--background-color);
   color: var(--text-color);
-  padding: 1.3rem;
+  padding: 1rem;
   margin-top: auto;
 }
 
