--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -7,11 +7,11 @@
   display: flex;
   align-items: center;
   justify-content: space-around;
-  height: 120vh;
+  height: 100vh;
   background-color: var(--background-color);
   color: var(--text-color);
   border-bottom: 2px solid var(--text-color);
-  text-shadow: 2px 2px 5px var(--text-shadow-color);
+  text-shadow: 0px -3px 6px var(--text-shadow-color);
 }
 
 .header::before {
@@ -36,6 +36,7 @@
 }
 .header strong {
   font-size: 3rem;
+  text-shadow: 0px 0px 10px var(--text-shadow-color);
 }
 
 .header h1 {
