--- a/src/index.css
+++ b/src/index.css
@@ -1,28 +1,45 @@
 @import url('https://fonts.googleapis.com/css2?family=Kanit:wght@400&display=swap');
+* {
+  margin: 0;
+  font-family: 'Kanit', sans-serif;
+  font-size: clamp(16px, 2.5vw, 24px);
+}
 
 :root {
   --background-color: black;
   --second-background-color: #121212;
   --text-color: white;
   --accent: #b272d2;
-  --header-background-image: url('/public/backgroundImg/backgroundWhite.png');
-  --text-shadow-color: black;
+  --header-background-image: url('/backgroundImg/backgroundWhite.png');
+  --text-shadow-color: rgba(0, 0, 0, 0.93);
 }
 
 body {
   min-height: 100vh;
+  overflow-y: scroll;
 }
 
 body.light {
   --background-color: white;
   --second-background-color: #f7effc;
   --text-color: black;
-  --header-background-image: url('/public/backgroundImg/backgroundBlack.png');
-  --text-shadow-color: white;
+  --header-background-image: url('/backgroundImg/backgroundBlack.png');
+  --text-shadow-color: rgba(255, 255, 255, 0.7);
 }
 
-* {
-  margin: 0;
-  font-family: 'Kanit', sans-serif;
-  font-size: clamp(16px, 2.5vw, 24px);
+::-webkit-scrollbar-thumb {
+  background-color: transparent;
+  border-radius: 10px;
+}
+
+body.scrolling::-webkit-scrollbar-thumb {
+  background-color: var(--text-color);
+}
+
+::-webkit-scrollbar-track {
+  background-color: var(--background-color);
+}
+
+::-webkit-scrollbar {
+  width: 10px;
 }
